--- a/project_jumble-v2.html
+++ b/project_jumble-v2.html
@@ -101,15 +101,20 @@
         <p class="is-size-5 has-text-black">
           Through early conversations with teams, we identified several critical issues:
         </p>
-        <ul style="pb-5">
+        <ul>
           <li>Knowledge was becoming siloed in individual team members</li>
           <li>Junior developers were missing key learning opportunities</li>
           <li>Teams spent too much time coordinating across time zones</li>
           <li>The spontaneous "tap on the shoulder" for help was gone</li>
         </ul>
-        <p class="is-size-5 has-text-black pb-5">
-          <strong>Goal:</strong> make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
-        </p>
+        <article class="message is-success" style="pt-5">
+          <div class="message-header">
+            <p>Goal</p>
+          </div>
+          <div class="message-body">
+            Make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
+          </div>
+        </article>
       </div>
     </div>
   </section>
