--- a/project_jumble-old.html
+++ b/project_jumble-old.html
@@ -47,7 +47,7 @@
           <a href="/" class="is-clickable">
             <p class="title is-4 has-text-weight-semibold has-text-black">Raúl Martín Parra</p>
           </a>
-          <p class="subtitle has-text-black is-6 has-text-weight-light">parramartinraul@gmail.com</p>
+          <p class="subtitle has-text-black is-6 has-text-weight-light">contact@raulmartin.work</p>
         </div>
       </div>
     </div>
@@ -75,46 +75,19 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths">
-        <span class="is-size-3 has-text-weight-semibold has-text-black">
-          Jumble
-        </span>
-      </div>
-      <div class="column has-text-black content">
-        <span class="is-size-4 has-text-weight-semibold has-text-black">
-          Context
-        </span>
+      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Jumble</span></div>
+      <div class="column">
+        <div class="tags mt-5">
+          <span class="tag is-category-tag is-rounded">MVP</span>
+          <span class="tag is-category-tag is-rounded">PRODUCT DESIGN</span>
+          <span class="tag is-category-tag is-rounded">SERVICE DESIGN</span>
+          <span class="tag is-category-tag is-rounded">UX/UI</span>
+          <span class="tag is-category-tag is-rounded">BRANDING</span>
+        </div>
         <p class="is-size-5 has-text-black">
-          During my time at EOI Foundation's accelerator program, I co-led the project taking on an ambitious challenge: reinventing how remote development teams collaborate. We had 6 weeks to validate, build, and launch a solution that would make a real difference in how teams work together.
-        </p> 
-        <article class="message is-dark pb-5">
-          <div class="message-body">
-            <strong>Timeline:</strong> 6 weeks </br>
-            <strong>Team:</strong> 1 developer, 1 product designer</br>
-            <strong>Role:</strong> Product Design, Frontend, User Research, UX/UI, Branding</span></br>
-            <strong>Impact:</strong> 100 initial users, validated core user flows</br>
-          </div>
-        </article>
-        <p class="is-size-5 has-text-black pb-5">
-          <strong>Problem:</strong> remote work is changing how development teams collaborate, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental, the spontaneous knowledge sharing that happens in an office.
+          Jumble let you host online pair programming sessions to collaborate live with other developers. This project was part of an acceleration programme by EOI Foundation. My role on this project included conceptualization, market analysis, interviews, prototyping, UX and UI design, and front-end development of the landing page and app components.
         </p>
-        <p class="is-size-5 has-text-black">
-          Through early conversations with teams, we identified several critical issues:
-        </p>
-        <ul>
-          <li>Knowledge was becoming siloed in individual team members</li>
-          <li>Junior developers were missing key learning opportunities</li>
-          <li>Teams spent too much time coordinating across time zones</li>
-          <li>The spontaneous "tap on the shoulder" for help was gone</li>
-        </ul>
-        <article class="message is-success" style="pt-5">
-          <div class="message-header">
-            <p>Goal</p>
-          </div>
-          <div class="message-body">
-            Make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
-          </div>
-        </article>
+
       </div>
     </div>
   </section>
@@ -128,39 +101,11 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths">
-        <div class="buttons are-large">
-          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-skill-tag"> DISCOVERY</span>
-        </div>
-      </div>
-      <div class="column has-text-black content">
-        <span class="is-size-4 has-text-weight-semibold has-text-black pb-5">
-          Assumptions, Research and Insights
-        </span>
-        <p class="is-size-5 has-text-black">
-          Through user interviews, we discovered teams weren't struggling with the actual pair programming—they were struggling with everything around it:
+      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The gap</span></div>
+      <div class="column has-text-black">
+        <p>
+          We wanted to address common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
         </p>
-        <blockquote>
-          "Finding the right person to pair with is often harder than solving the actual coding problem." - Senior Engineer at a 200-person startup
-        </blockquote>
-        <p class="is-size-5 has-text-black">
-          Our research also revealed that some remote development teams were struggling to maintain collaborative coding practices. Through user interviews and market analysis, we identified that while teams valued pair programming, the logistics of organizing sessions remotely was a significant barrier to adoption.
-        </p>
-        <blockquote>
-          "Finding the right person to pair with is often harder than solving the actual coding problem." - Senior Engineer at a 200-person startup
-        </blockquote>
-        <blockquote>
-          "Most of our knowledge sharing happens by accident - when someone overhears a problem being discussed. We've lost that in remote work." - Tech Lead
-        </blockquote>
-        <p class="is-size-5 has-text-black">
-        Other common issues that we found:
-        </p>
-        <ul>
-          <li>Employees with varying levels of technical expertise</li>
-          <li>The lack cohesive teamwork</li>
-          <li>Poor communication between teams</li>
-          <li>Critical knowledge being concentrated in a single individual</li>
-        </ul>
       </div>
     </div>
   </section>
