--- a/project_jumble.html
+++ b/project_jumble.html
@@ -47,7 +47,7 @@
           <a href="/" class="is-clickable">
             <p class="title is-4 has-text-weight-semibold has-text-black">Raúl Martín Parra</p>
           </a>
-          <p class="subtitle has-text-black is-6 has-text-weight-light">contact@raulmartin.work</p>
+          <p class="subtitle has-text-black is-6 has-text-weight-light">parramartinraul@gmail.com</p>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
             </span>
           </button>
         </a>
-        <a class="control" href="mailto:contact@raulmartin.work?cc=parramartinraul@gmail.com" target=”_blank”>
+        <a class="control" href="mailto:parramartinraul@gmail.com" target=”_blank”>
           <button class="button is-black is-outlined is-normal">
             <span>Get in touch</span>
           </button>
@@ -75,19 +75,29 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-3 has-text-weight-semibold has-text-black">Jumble</span></div>
-      <div class="column">
-        <div class="tags mt-5">
-          <span class="tag is-category-tag is-rounded">MVP</span>
-          <span class="tag is-category-tag is-rounded">PRODUCT DESIGN</span>
-          <span class="tag is-category-tag is-rounded">SERVICE DESIGN</span>
-          <span class="tag is-category-tag is-rounded">UX/UI</span>
-          <span class="tag is-category-tag is-rounded">BRANDING</span>
-        </div>
-        <p class="is-size-5 has-text-black">
-          Jumble let you host online pair programming sessions to collaborate live with other developers. This project was part of an acceleration programme by EOI Foundation. My role on this project included conceptualization, market analysis, interviews, prototyping, UX and UI design, and front-end development of the landing page and app components.
+      <div class="column is-two-fifths">
+        <span class="is-size-3 has-text-weight-semibold has-text-black">
+          Jumble
+        </span>
+      </div>
+      <div class="column has-text-black content">
+        <p class="is-size-5 has-text-black pb-5">
+          During my time at EOI Foundation's accelerator program, I co-led the project taking on an ambitious challenge: reinventing how remote development teams collaborate. We had 6 weeks to validate, build, and launch a solution that would make a real difference in how teams work together.
+        </p> 
+        <article class="message is-dark pb-5">
+          <div class="message-body">
+            <strong>Timeline:</strong> 6 weeks </br>
+            <strong>Team:</strong> 1 developer, 1 product designer</br>
+            <strong>Role:</strong> Product Design, Frontend, User Research, UX/UI, Branding</span></br>
+            <strong>Impact:</strong> 100 initial users, validated core user flows</br>
+          </div>
+        </article>
+        <p class="is-size-5 has-text-black pb-5">
+          <strong>Problem:</strong> remote work is changing how development teams collaborate, and not always for the better. While tools for video calls and code sharing were abundant, teams were struggling with something more fundamental, the spontaneous knowledge sharing that happens in an office.
         </p>
-
+        <p class="is-size-5 has-text-black">
+          <strong>Goal:</strong> make remote pair programming as natural as turning to a colleague in the office. We wanted to eliminate the friction in finding help while preserving teams' existing workflows and tools.
+        </p>
       </div>
     </div>
   </section>
@@ -101,10 +111,100 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The gap</span></div>
-      <div class="column has-text-black">
-        <p>
-          We wanted to address common issues faced by tech companies: employees with varying levels of technical expertise, the lack cohesive teamwork, poor communication between teams, and critical knowledge being concentrated in a single individual, which creates knowledge gaps and long-term challenges.
+      <div class="column is-two-fifths">
+        <div class="buttons are-large">
+          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-skill-tag"> DISCOVERY</span>
+        </div>
+      </div>
+      <div class="column has-text-black content">
+        <p class="is-size-5 has-text-black pb-5">
+          We conducted 15 interviews with devs and tech leads. We realized that remote teams weren't struggling with the actual pair programming sessions, it was about everything around it. While teams valued collaborative coding practices, the logistics of remote sessions created significant barriers to adoption.
+        </p>
+        <p class="is-size-5 has-text-black">
+          We identified potential issues we could leverage:
+        </p>
+        <ul>
+          <li>Knowledge was becoming siloed in individual team members</li>
+          <li>Junior developers were missing key learning opportunities</li>
+          <li>Teams spent too much time coordinating across time zones</li>
+          <li>The spontaneous "tap on the shoulder" for help was gone</li>
+          <li>Employees with varying levels of technical expertise</li>
+          <li>The lack cohesive teamwork</li>
+          <li>Poor communication between teams</li>
+        </ul>
+        <p class="is-size-5 has-text-black pt-5 pb-5">
+          The real challenge wasn't technical, it was understanding how to recreate a natural flow of knowledge-sharing in a remote context.
+        </p>
+        <blockquote>
+          "Finding the right person to pair with is often harder than solving the actual coding problem." - <i>Senior Engineer</i>
+        </blockquote>
+        <blockquote>
+          "Most of our knowledge sharing happens by accident - when someone overhears a problem being discussed. We've lost that in remote work." - <i>Tech Lead</i>
+        </blockquote>
+        <p class="is-size-5 has-text-black pt-5 pb-5">
+          <strong>Hypothesis:</strong> if we could make finding programming partners effortless, developers would naturally maintain better collaboration and coding practices.
+        </p>
+        <p class="is-size-5 has-text-black">
+          <strong>This was worth pursuing because:</strong> the problem was focused and solvable, teams were actively looking for solutions, we could deliver value in our 6-week timeline.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section px-0">
+    <img
+      class="image is-fullwidth is-border-soft"
+      src="media/projects/jumble-6.jpeg"
+    >
+  </section>
+
+  <section class="section px-0">
+    <div class="columns">
+      <div class="column is-two-fifths">
+        <div class="buttons are-large">
+          <span class="button is-rounded is-black is-outlined is-tag is-border-thin is-skill-tag">ACTION</span>
+        </div>
+      </div>
+      <div class="column has-text-black content">
+        <article class="message is-link">
+          <div class="message-body">
+            <strong>VALUE PROPOSITION:</strong> Jumble is a collaboration platform that makes it easy to find and connect with programming partners, focusing on enabling spontaneous collaboration while integrating with existing tools.
+          </div>
+        </article>
+        <p class="is-size-5 has-text-black pt-5 pb-5">
+          Our focus was speed and simplicity over complexity. Every feature decision was filtered through one question: "Does this make it faster and easier to get help?"
+        </p>
+        <div class="grid">
+          <div class="cell">
+            <p class="is-size-5 has-text-black">
+              <strong>Scope</strong>
+            </p>
+            <ul>
+              <li>Real-time availability system</li>
+              <li>Basic skill matching</li>
+              <li>Quick session creation</li>
+              <li>Easy login w/ Github</li>
+            </ul>
+          </div>
+          <div class="cell">
+            <p class="is-size-5 has-text-black">
+              <strong>Out of scope</strong>
+            </p>
+            <ul>
+              <li>Built-in video/code tools (teams already had preferences)</li>
+              <li>Complex scheduling (focus on spontaneous collaboration)</li>
+              <li>Team analytics (saved for future)</li>
+            </ul>
+          </div>
+        </div>
+        <p class="is-size-5 has-text-black pt-5">
+          Within our tight 6-week timeline, we followed a structured development approach. <strong>The first two weeks</strong> focused on research and validation, where we dove deep into the problem space and tested basic flows with users before writing any production code.
+        </p> 
+        <p class="is-size-5 has-text-black">
+        This foundation led us into <strong>weeks three and four</strong>, where we built our core features: real-time availability, quick matching, and session creation, maintaining a sharp focus on reliability and speed. 
+        </p>
+        <p class="is-size-5 has-text-black">
+        <strong>Week five</strong> was dedicated to beta testing with 3 different teams, gathering crucial feedback while fixing bugs and polishing rough edges. In our <strong>final week</strong>, we concentrated on launch preparations, including thorough testing and documentation to ensure a smooth release.
         </p>
       </div>
     </div>
@@ -136,29 +236,31 @@
 
   <section class="section px-0">
     <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">The goal</span></div>
-      <div class="column has-text-black">
-        <p>
-          The vision was to create a community to engage with other developers and solve problems better, and to find each other not because of geographical proximity but because they are the right people in the right place. Jumble lets you host sessions to collaborate live with other developers in a project you have, and participate in sessions hosted by other developers to collaborate and contribute.
-        </p>
+      <div class="column is-two-fifths">
       </div>
-    </div>
-  </section>
-
-  <section class="section px-0">
-    <img
-      class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-5.jpeg"
-    >
-  </section>
-
-  <section class="section px-0">
-    <div class="columns">
-      <div class="column is-two-fifths"><span class="is-size-5 has-text-weight-semibold has-text-black">A 4 month process</span></div>
-      <div class="column has-text-black">
-        <p>
-          During this period, we worked hard to transform a basic idea into a fully functional MVP that we're proud of. We developed detailed business plans and had in-depth conversations with potential customers. We were flexible enough to pivot when necessary, trying out different approaches to tackle the problem. This whole accelerator process wasn't just about creating a product; it was about refining our skills and learning from every step.
+      <div class="column has-text-black content">
+        <p class="is-size-5 has-text-black">
+          <strong>Challenges</strong>
         </p>
+        <ul>
+          <li>Time zone handling proved more complex than expected. We simplified our approach to focus on "available now" status.</li>
+          <li>Some teams were hesitant to adopt another tool. We overcame this by focusing on integration with existing workflows rather than replacing them.</li>
+          <li>Overall availability of sesssions for users outside of company setups.</li>
+        </ul>
+        <p class="is-size-5 has-text-black">
+          <strong>Learnings</strong>
+        </p>
+        <ul>
+          <li>By solving one problem really well instead of many problems partially, we created more value for users.</li>
+          <li>Our early insights about quick matches being more valuable than perfect matches proved correct.</li>
+          <li>Sometimes the best solution isn't building something new, but making existing tools work better together.</li>
+        </ul>
+        <p class="is-size-5 has-text-black pt-5">
+          Despite initial positive user feedback, we made the decision to discontinue Jumble after four months. While users who adopted the platform reported significant value -  we struggled to achieve the critical mass needed for sustainable network effects. 
+        </p>
+        <p class="is-size-5 has-text-black pt-5"> 
+          The core challenge emerged: teams needed both helpers and help-seekers consistently active for the platform to provide value, but this circular dependency proved difficult to overcome. This experience provided valuable insights about network-dependent products and the specific challenges of building tools for developer workflows.
+        </p> 
       </div>
     </div>
   </section>
@@ -166,7 +268,7 @@
   <section class="section px-0 pb-5">
     <img
       class="image is-fullwidth is-border-soft"
-      src="media/projects/jumble-6.jpeg"
+      src="media/projects/jumble-5.jpeg"
     >
   </section>
 
