--- a/project_jumble.html
+++ b/project_jumble.html
@@ -198,10 +198,10 @@
           </div>
         </div>
         <p class="is-size-5 has-text-black pt-5">
-          Within our tight 6-week timeline, we followed a structured development approach. <strong>The first two weeks</strong> focused on research and validation, where we dove deep into the problem space and tested basic flows with users before writing any production code.
+          We had a 6-week timeline: <strong>The first two weeks</strong> focused on research and validation, where we dove deep into the problem space and tested basic flows with users before writing any production code.
         </p> 
         <p class="is-size-5 has-text-black">
-        This foundation led us into <strong>weeks three and four</strong>, where we built our core features: real-time availability, quick matching, and session creation, maintaining a sharp focus on reliability and speed. 
+        This led to <strong>weeks three and four</strong>, where we built our core features: real-time availability, quick matching, and session creation, maintaining a sharp focus on reliability and speed. 
         </p>
         <p class="is-size-5 has-text-black">
         <strong>Week five</strong> was dedicated to beta testing with 3 different teams, gathering crucial feedback while fixing bugs and polishing rough edges. In our <strong>final week</strong>, we concentrated on launch preparations, including thorough testing and documentation to ensure a smooth release.
